--- a/frontend/src/app/styles/variables/global.scss
+++ b/frontend/src/app/styles/variables/global.scss
@@ -1,14 +1,27 @@
 :root {
-    --font-family-main: Consolas, "Times New Roman", Serif;
+  --font-family-main: "Play", sans-serif;
+  --font-family-alt: "Open Sans", sans-serif;
 
-    --font-size-m: 16px;
-    --font-line-m: 24px;
-    --font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
+  /* -----------------------------
+     Размеры шрифта Play
+  ----------------------------- */
+  --font-size-xl: 48px;
+  --font-line-xl: 56px;
+  --font-xl: var(--font-size-xl) / var(--font-line-xl) var(--font-family-main);
 
-    --font-size-l: 24px;
-    --font-line-l: 32px;
-    --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
+  --font-size-l: 40px;
+  --font-line-l: 48px;
+  --font-l: var(--font-size-l) / var(--font-line-l) var(--font-family-main);
 
-    // Размеры
-    --navbar-height: 50px;
+  --font-size-m: 24px;
+  --font-line-m: 32px;
+  --font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
+
+  --font-size-s: 18px;
+  --font-line-s: 24px;
+  --font-s: var(--font-size-s) / var(--font-line-s) var(--font-family-main);
+
+  --font-size-xs: 14px;
+  --font-line-xs: 20px;
+  --font-xs: var(--font-size-xs) / var(--font-line-xs) var(--font-family-main);
 }
