--- a/frontend/src/app/styles/themes/normal.scss
+++ b/frontend/src/app/styles/themes/normal.scss
@@ -2,6 +2,6 @@
   --bg-color: #282828;
   --main-bg-color: #0d1a2d;
   --primary-color: #fff;
-  --secondary-color: rgba(255, 255, 255, 0.7);
+  --secondary-color: rgb(255 255 255 / 70%);
   --accent-color: #000;
 }
