--- a/frontend/src/app/styles/themes/white.scss
+++ b/frontend/src/app/styles/themes/white.scss
@@ -2,6 +2,6 @@
   --bg-color: #fff;
   --main-bg-color: #001f3f;
   --primary-color: #000;
-  --secondary-color: #bbbbbb;
-  --accent-color: #3399ff;
+  --secondary-color: #bbb;
+  --accent-color: #39f;
 }
