--- a/frontend/src/app/styles/variables/fonts.scss
+++ b/frontend/src/app/styles/variables/fonts.scss
@@ -8,7 +8,7 @@
 }
 
 @font-face {
-  font-family: "Play";
+  font-family: Play;
   src:
     url("/frontend/public/fonts/play-regular-webfont.woff2") format("woff2"),
     url("/frontend/public/fonts/play-regular-webfont.woff") format("woff");
@@ -17,7 +17,7 @@
 }
 
 @font-face {
-  font-family: "Play";
+  font-family: Play;
   src:
     url("/frontend/public/fonts/opensans-bold-webfont.woff2") format("woff2"),
     url("/frontend/public/fonts/opensans-bold-webfont.woff") format("woff");
