--- a/frontend/src/app/styles/index.scss
+++ b/frontend/src/app/styles/index.scss
@@ -3,13 +3,22 @@
 @use "variables/global";
 @use "themes/normal";
 @use "themes/white";
+@use "../../widgets/Header/ui/Header.module.scss";
 
 .app {
-  font: var(--font-m);
+  width: 1440px;
+  position: relative;
+  display: block;
+  margin: 0 auto;
+  // font: var(--font-m);
   min-height: 100vh;
   background-color: var(--bg-color);
   color: var(--primary-color);
   transition:
     background-color 0.3s ease,
     color 0.3s ease;
+}
+
+.container {
+  padding: 24px 80px 40px 80px;
 }
